# DeepBrain_OS

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
deepbrain-cli/: Cargo.toml
deepbrain-cli/src/: main.rs
examples/: notebook-integration.ts
src/: App.tsx
src-mcp/: package-lock.json  package.json
src-mcp/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  api.rs  autostart.rs  commands.rs  context.rs  keychain.rs  lib.rs  main.rs  overlay.rs  state.rs  tray.rs  workflows.rs
src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs
src-tauri/src/brain/: cognitive.rs  embeddings.rs  gnn.rs  hnsw.rs  learning.rs  memory.rs  mod.rs  persistence.rs  types.rs  utils.rs
src-tauri/src/deepbrain/: brainwire_bridge.rs  compress_bridge.rs  error.rs  gnn_bridge.rs  graph_bridge.rs  id_map.rs  llm_bridge.rs  metrics.rs  migration.rs  mod.rs  nervous_bridge.rs  sona_bridge.rs  vector_store.rs
src-tauri/src/indexer/: bootstrap.rs  browser.rs  chunker.rs  claude_listener.rs  email.rs  mod.rs  parser.rs  watcher.rs
src-tauri/src/indexer/connectors/: apple_notes.rs  browser.rs  chromium.rs  claude_code.rs  claude_desktop.rs  claude_history.rs  claude_memory.rs  claude_plans.rs  deepnote.rs  file_index.rs  firefox.rs  mod.rs  obsidian.rs  safari.rs  whatsapp.rs
src/components/: BrowseView.tsx  BrowserLogin.tsx  ChatView.tsx  ContentList.tsx  DashboardView.tsx  KnowledgeExportView.tsx  KnowledgeGraphView.tsx  MemoryFeed.tsx  Onboarding.tsx  PreviewPane.tsx  QuickActions.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  Toolbar.tsx
src/hooks/: useBrain.ts
src/services/: backend.ts
src/store/: appStore.ts
