[workspace]
members = ["src-tauri", "deepbrain-cli"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Patch hnsw_rs to use rand 0.8 (matches ruvector-main workspace patch)
[patch.crates-io]
hnsw_rs = { path = "../ruvector-main/patches/hnsw_rs" }
