[package]
name = "deepbrain-app"
version = "0.2.0"
edition = "2021"
description = "DeepBrain - Cognitive memory layer with RVF crash-safe vector storage"
license = "MIT"
rust-version = "1.87"

[lib]
name = "deepbrain_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deepbrain-app"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# AI providers
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"

# File system watching
notify = "7"

# Parallelism and performance
rayon = "1.10"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

# Data structures
dashmap = "6"
smallvec = "1.13"
ahash = "0.8"

# Serialization
bincode = "1"

# Random and math
rand = "0.8"

# HTTP API
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.10.0"
calamine = "0.26"
security-framework = "3.6.0"
battery = "0.7.8"
ort = "2.0.0-rc.11"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
ndarray = "0.17.2"
hnsw_rs = "0.3"
tauri-plugin-updater = "2.10.0"

# RuVector crash-safe vector storage (redb + HNSW)
ruvector-core = { path = "../../ruvector-main/crates/ruvector-core", features = ["storage", "hnsw"] }
ruvector-sona = { path = "../../ruvector-main/crates/sona", default-features = false, features = ["serde-support"] }
ruvector-nervous-system = { path = "../../ruvector-main/crates/ruvector-nervous-system", default-features = false }
ruvector-graph = { path = "../../ruvector-main/crates/ruvector-graph", default-features = false, features = ["storage"] }
ruvector-gnn = { path = "../../ruvector-main/crates/ruvector-gnn", default-features = false }
ruvllm = { path = "../../ruvector-main/crates/ruvllm", default-features = false, features = ["async-runtime", "candle", "gguf-mmap", "parallel"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
